--- a/src/main/resources/bootstrap-prod.yml
+++ b/src/main/resources/bootstrap-prod.yml
@@ -1,9 +1,12 @@
 spring:
   cloud:
     nacos:
+      #服务的注册与发现
+      discovery:
+        server-addr: 47.119.168.151:8848
       config:
         # nacos 配置服务的地址，后面的端口不能省，即使是80端口
-        server-addr: localhost:8848
+        server-addr: 47.119.168.151:8848
         # 加载 dataid 配置文件的后缀，默认是 properties
         file-extension: yml
         # 配置组，默认就是 DEFAULT_GROUP
