--- a/src/main/resources/bootstrap-prod.yml
+++ b/src/main/resources/bootstrap-prod.yml
@@ -4,6 +4,10 @@ spring:
       #服务的注册与发现
       discovery:
         server-addr: 47.119.168.151:8848
+        #用户名
+        username: nacos
+        #密码
+        password: nacos
       config:
         # nacos 配置服务的地址，后面的端口不能省，即使是80端口
         server-addr: 47.119.168.151:8848
@@ -15,3 +19,7 @@ spring:
         namespace: 9f7c282e-0e20-400e-89df-55133ac51158
         # data-id 的前缀,默认就是 spring.application.name 的值
         prefix: gateway
+        #用户名
+        username: nacos
+        #密码
+        password: nacos
